src/test/compile-fail/bad-alt.rs
// xfail-stage0
// xfail-stage1
// xfail-stage2
// error-pattern: expecting

fn main() {
  let int x = 5;
  alt x;
}
